--- a/Final_Fund_HTML/experiencia.html
+++ b/Final_Fund_HTML/experiencia.html
@@ -27,49 +27,8 @@
   	  </nav>
     </header>
     <section>
-      <p><h2>Información Personal</h2></p>
-      <img src="img/pbc.png" alt="Pablo Belmar Cubillos" width="200">
-      <ul>
-        <h3><li>Nombres: N&eacute;stor Pablo Andr&eacute;s</li></h3>
-        <h3><li>Apellidos: Belmar Cubillos</li></h3>
-        <h3><li>Fecha de Nacimiento: 13 de julio de 1982</li></h3>
-        <h3><li>Lugar de Nachimiento: Arica, Chile</li></h3>
-      </ul>
-    </section>
-    <section>
-      <p><h2>Perfil</h2></p>
-      <p><h3>Descripción Profesional</h3></p>
-      <p>Profesional especialista en Trabajo Colaborativo en la Industria de la Construcción, con fuerte orientación
-        al mejoramiento de procesos de gestión y control. Siete años de experiencia laboral, en su mayoría desempeñados
-        en la Administración e Inspección de Proyectos, entre los cuales destacan Remodelación Edificio Hospital del
-        Trabajador ACHS Vicuña Mackenna, Clínica BUPA Cruz Blanca Salud, Nuevo Hospital de Quellon, BIM Manager para
-        Sociedad Concesionaria Nuevo Pudahuel responsable de la definición e implementación del Sistema BIM para el
-        proyecto Remodelación y Ampliación Aeropuerto Internacional  Arturo Merino Benites de Santiago, el cual se
-        desarrolló en base a tecnología Revit, Civil 3D, Infraworks y BIM 360 de Autodesk, con lo cual reúne alrededor
-        de 1.000.000 m2 de proyectos estudiados y ejecutados que respaldan la expertiz del profesional.<br>Con formación
-        Académica de Magíster en Administración de la Construcción, este profesional enriquece y fortalece sus
-        conocimientos en la gestión de proyectos de gran envergadura en la Industria de la Construcción y adquiere
-        habilidades y herramientas de vanguardia a nivel mundial y de gran expansión actual en el país
-        (BIM, Lean Construction, Last Planner, Six Sigma, Gestión Integral de Calidad, Normativa ISO series 9000,
-        14000, 21500).
-      </p>
-      <p><h3>Idiomas</h3></p>
-        <ul>
-          <li><h4>Español:</h4>
-            <ul>
-              <li>Hablado: Nativo</li>
-              <li>Escritura: Nativo</li>
-              <li>Lectura: Nativo</li>
-            </ul>
-          <li><h4>Inglés:</h4>
-            <ul>
-              <li>Hablado: Nivel Medio</li>
-              <li>Escritura: Nivel Nedio</li>
-              <li>Lectura: Nivel Avanzado</li>
-            </ul>
-          </li>
-        </ul>
-    </section>
+      <p><h2>Experiencia</h2></p>
+      
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
