--- a/Final_Fund_HTML/educacion.html
+++ b/Final_Fund_HTML/educacion.html
@@ -28,7 +28,40 @@
     </header>
     <section>
       <p><h2>Educación</h2></p>
-      
+      <table border="1" cellpadding="10" cellspacing="0">
+        <thead>
+          <th>Año</th>
+          <th>Institución</th>
+          <th>Carrera</th>
+          <th>Lugar</th>
+          <th>¿Culminó?</th>
+        <tbody>
+          <tr>
+            <td>2003</td>
+            <td>Pontificia Universidad Católica de Chile</td>
+            <td>Construcción Civil</td>
+            <td>Santiago de Chile</td>
+            <td>Sí</td>
+          </tr>
+          <tr>
+            <td>2013</td>
+            <td>Pontificia Universidad Católica de Chile</td>
+            <td>Magíster en Administración de la Construcción</td>
+            <td>Santiago de Chile</td>
+            <td>Sí</td>
+          </tr>
+          <tr>
+            <td>2010</td>
+            <td>CDC Academia</td>
+            <td>Diplomado Arquitectura Digital BIM</td>
+            <td>Santiago de Chile</td>
+            <td>Sí</td>
+          </tr>
+        </tbody>
+        </thead>
+      </table>
+    </section>
+    
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
