--- a/Final_Fund_HTML/experiencia.html
+++ b/Final_Fund_HTML/experiencia.html
@@ -28,7 +28,7 @@
     </header>
     <section>
       <p><h2>Experiencia</h2></p>
-      
+    </section>
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
