--- a/Final_Fund_HTML/educacion.html
+++ b/Final_Fund_HTML/educacion.html
@@ -61,7 +61,45 @@
         </thead>
       </table>
     </section>
-    
+    <section>
+      <form >
+        <legend><h2>Agregar Estudios</h2></legend>
+        <label for="anio">Año:</label>
+        <select class="" name="" id="anio">
+          <option>2000</option>
+          <option>2001</option>
+          <option>2002</option>
+          <option>2003</option>
+          <option>2004</option>
+          <option>2005</option>
+          <option>2006</option>
+          <option>2007</option>
+          <option>2008</option>
+          <option>2009</option>
+          <option>2010</option>
+          <option>2011</option>
+          <option>2012</option>
+          <option>2013</option>
+          <option>2014</option>
+          <option>2015</option>
+          <option>2016</option>
+          <option>2017</option>
+        </select><br><br>
+        <label for="institucion">Institución:</label>
+        <input type="text" id="institucion" required placeholder="ej: Pontificia Universidad Católica de Chile"><br><br>
+        <label for="carrera">Carrera:</label>
+        <input type="text" id="carrera" placeholder="ej: Construcción Civil"><br><br>
+        <label for="lugar">Lugar:</label>
+        <textarea name="name" id="lugar" rows="4" cols="30"></textarea><br><br>
+        <p>¿Culminó?</p>
+        <label for="si">Si</label>
+        <input type="radio" name="sino" value="Si" id="si"checked>
+        <label for="no">No</label>
+        <input type="radio" name="sino" value="No"id="no"><br><br>
+        <input type="submit" name="enviar" value="Agregar Estudios">
+
+      </form>
+    </section>
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
