--- a/Final_Fund_HTML/experiencia.html
+++ b/Final_Fund_HTML/experiencia.html
@@ -28,6 +28,12 @@
     </header>
     <section>
       <p><h2>Experiencia</h2></p>
+      <p><h3>Video Presentación Personal</h3></p>
+      <video src="video/PBC.mp4" controls width="600">
+      </video>
+      <p><h3>Audio Hobbies e Intereses</h3></p>
+      <audio src="audio/PBC.mp3" controls>
+      </audio>
     </section>
     <footer>
       <p>@Derechos Reservados</p>
